fix: slider image align

--- a/ecommerce-application/src/features/product/components/Slider/Slider.module.scss
+++ b/ecommerce-application/src/features/product/components/Slider/Slider.module.scss
@@ -8,6 +8,7 @@
 }
 
 .swiper_slide {
+  align-self: center;
   width: 100%;
   height: 100%;
   display: flex;
